feat(post): create post with version and tags
