# models/user_request_response.go
@@ -1,44 +1,0 @@
-package models
-
-import (
-	validation "github.com/go-ozzo/ozzo-validation"
-	"github.com/go-ozzo/ozzo-validation/is"
-)
-
-type RegisterRequest struct {
-	Name     string `json:"name"`
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-func (r RegisterRequest) Validate() error {
-	return validation.ValidateStruct(&r,
-		validation.Field(&r.Name, validation.Required, validation.RuneLength(3, 100)),
-		validation.Field(&r.Email, validation.Required, validation.Length(5, 50), is.Email),
-		validation.Field(&r.Password, validation.Required, validation.Length(6, 20)),
-	)
-}
-
-type RegisterResponse struct {
-	ID        string `json:"id"`
-	Name      string `json:"name"`
-	Email     string `json:"email"`
-	Role      string `json:"role"`
-	CreatedAt string `json:"created_at"`
-}
-
-type LoginRequest struct {
-	Email    string `json:"email"`
-	Password string `json:"password"`
-}
-
-type LoginResponse struct {
-	Token string `json:"token"`
-}
-
-func (r LoginRequest) Validate() error {
-	return validation.ValidateStruct(&r,
-		validation.Field(&r.Email, validation.Required, validation.Length(5, 50), is.Email),
-		validation.Field(&r.Password, validation.Required, validation.Length(6, 20)),
-	)
-}
